--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,7 @@ form button{
 }
 .tabsouter ul li {
 
+
 }
 
 
@@ -105,9 +106,12 @@ form button{
 
 
 button{
-  background-color: #000;
-  color: wheat  ;
-  border-radius: 20px;
-padding: 20px 50px;
+  background-color: #e4e4e4;
+  color: #343a40  ;
+  border-radius: 10px;
+padding: 0.5rem 20px;
+margin-right: 18px;
+font-weight: 600;
+border: none;
 
 }
